add default comments

--- a/src/posts/better-comments/index.mdx
+++ b/src/posts/better-comments/index.mdx
@@ -16,4 +16,18 @@ Since it's easily customised, what categories you want to define for your commen
 is completely up to you (and your team), but there are five defaults to give you
 an idea of what might be helpful:
 
-### Todos
+### Default comments
+
+Here are all 5 default comments in all their glory:
+
+```js
+// todo: replace hardcoded arrays when api is available
+
+// ! Never delete this or our api key will be exposed
+
+// * Used to convert the weird strings in notActuallyJson.js
+
+// ? This works for now but doesn't fit too well with our functional paradigm
+
+// // Necessary polyfill for intersectionObserver
+```
