--- a/src/posts/better-comments/index.mdx
+++ b/src/posts/better-comments/index.mdx
@@ -4,6 +4,9 @@ date: 2020-11-02
 published: true
 ---
 
+import React from 'react'
+import Todo from './Todo'
+
 ## What? Why?
 
 Quite simply, Better Comments is a VS Code extension that helps you to
@@ -19,6 +22,8 @@ an idea of what might be helpful:
 ### Default comments
 
 Here are all 5 default comments in all their glory:
+
+<Todo codeString="// todo: replace hardcoded arrays when api is available" />
 
 ```js
 // todo: replace hardcoded arrays when api is available
