feat: move the whole BetterComments example to its own component

--- a/src/posts/better-comments/index.mdx
+++ b/src/posts/better-comments/index.mdx
@@ -5,7 +5,7 @@ published: true
 ---
 
 import React from 'react'
-import Todo from './Todo'
+// import BetterComments from './BetterCommentsExample'
 
 ## What? Why?
 
@@ -23,16 +23,4 @@ an idea of what might be helpful:
 
 Here are all 5 default comments in all their glory:
 
-<Todo codeString="// todo: replace hardcoded arrays when api is available" />
-
-```js
-// todo: replace hardcoded arrays when api is available
-
-// ! Never delete this or our api key will be exposed
-
-// * Used to convert the weird strings in notActuallyJson.js
-
-// ? This works for now but doesn't fit too well with our functional paradigm
-
-// // Necessary polyfill for intersectionObserver
-```
+<BetterComments />
