feat: add descriptions to blog posts and start index page styles

--- a/src/posts/2019-07-01-code-blocks/index.mdx
+++ b/src/posts/2019-07-01-code-blocks/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Code Blocks
+description: How to make code blocks and influence markdown. For legends.
 date: 2019-07-01
 published: true
 ---
