--- a/src/posts/2019/2019-06-20-third-post/index.mdx
+++ b/src/posts/2019/2019-06-20-third-post/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Third Post!
+description: My third post this may be, but I'm smarter than Tweedle-dum and tweedle-dee. Let's see what it looks like when I've mud on my knee.
 date: 2019-06-20
 published: true
 ---
