--- a/src/posts/2019/hello-world/index.mdx
+++ b/src/posts/2019/hello-world/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Hello World - from mdx!
+description: It's a beautiful day; let's go and roll about in the hay. I said, hey!
 date: 2019-06-01
 published: true
 ---
