--- a/src/posts/better-comments/index.mdx
+++ b/src/posts/better-comments/index.mdx
@@ -1,5 +1,6 @@
 ---
-title: How to customise Better Comments - a handy VS Code extension
+title: How to customise Better Comments
+description: A handy VS Code extension
 date: 2020-11-02
 published: true
 ---
